<resources>
    <string name="app_name" translatable="false">Recognizer</string>

    <!-- MainActivity -->
    <string name="camera_permission_denied">Camera permission denied</string>
    <string name="button_document">Read text from ID card</string>
    <string name="button_face">Detect face</string>
    <string name="face_picture">Face picture</string>
    <string name="id_card">ID Card</string>
    <string name="no_pictures_yet">Take pictures from your face and ID card</string>

    <!-- Exceptions handled -->
    <string name="face_not_found">Couldn\'t identify your face, try again</string>
    <string name="many_faces_found">More than one face found, please take picture of only one face</string>
    <string name="text_not_found">Couldn\'t found any document with text, try again</string>

    <!-- Error messages -->
    <string name="error_loading_camera">Sorry, camera hardware could not be loaded</string>
    <string name="error_taking_picture">Sorry, was not possible to take a picture on this device</string>
    <string name="error_processing_image">Sorry, was not possible to process the image. Try again later</string>
    <string name="ok">Ok</string>
</resources>
